@@ -1,3 +1,6 @@
+05-Jan-2003 by Matthias Braun
+-server browser works so far
+
 04-Jan-2003 by Matthias Braun
 -started a new IRC library
 -started a commandline server browser tool
